2001-09-05  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/Michelle.pm (_set_index_rules): Forgot about ORAC_DATA_CAL

	* Inst/Defn.pm (orac_determine_primitive_search_path): Add IFU to UIST

2001-08-13  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: deg2rad and rad2deg

2001-08-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (read_recipe): Deal with ambiguity for recipes too

2001-08-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm: Add support for big "switch" statement when a
	primitive name is ambiguous. 

	* Inst/Defn.pm (orac_list_generic_observing_modes): Add new routine

2001-08-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (configure): Add support for .I1BEAM components.
	(mergehdr): Allow for case where .MORE is not present

	* Calib/CGS4.pm: Add profile()

	* Calib.pm (readnoise): Add readnoise support

2001-08-06  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib.pm (thing): Add thingone and thingtwo

	* Core.pm (orac_process_frame): use thingone and thingtwo

2001-07-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Comment out DINDEX

	* Inst/Defn.pm (orac_configure_for_instrument): Try to recognise
	IRCAM2 and UFTI2
	(orac_configure_for_instrument): Add UIST

2001-07-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm: Add IRIS2

	* Group/IRIS2.pm: Add

	* Frame/IRIS2.pm: Add

2001-06-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm: Protect 'new ORAC::Recipe' with a try block

2001-06-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_parse_recursively): Turn off misc warnings during
	recursion. Fix recursion bug introduced by Alisdair.
	(_add_code_to_recipe): Try to stop warnings with commented out ORAC_STATUS

2001-06-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Index.pm (verify): Turn off "void" warnings in rule verification

	* Recipe.pm (_parse_recursively): Force "real" line numbers now
	that I have woken up over #line

2001-06-12  Tim Jenness  <timj@jach.hawaii.edu>
