@@ -1,3 +1,7 @@
+2001-09-07  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Inst/Defn.pm: Add figaro3 and figaro5
+
 2001-09-05  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Calib/Michelle.pm (_set_index_rules): Forgot about ORAC_DATA_CAL
